adding test to screen

--- a/src/screen/CMakeLists.txt
+++ b/src/screen/CMakeLists.txt
@@ -1,3 +1,16 @@
+enable_testing()
+
+add_executable(screen_test)
+target_sources(screen_test
+    PRIVATE
+        tests/screen.cc
+)
+target_link_libraries(screen_test
+  PRIVATE
+    Screen
+    GTest::gtest_main
+)
+
 add_library(Screen)
 
 target_sources(Screen
@@ -9,3 +22,6 @@ target_sources(Screen
         FILES
             screen.hpp
 )
+
+include(GoogleTest)
+gtest_discover_tests(screen_test)
