refactoring global structure

--- a/src/screen/CMakeLists.txt
+++ b/src/screen/CMakeLists.txt
@@ -1,16 +1,3 @@
-enable_testing()
-
-add_executable(screen_test)
-target_sources(screen_test
-    PRIVATE
-        tests/screen.cc
-)
-target_link_libraries(screen_test
-  PRIVATE
-    Screen
-    GTest::gtest_main
-)
-
 add_library(Screen)
 
 target_sources(Screen
@@ -19,9 +6,7 @@ target_sources(Screen
     
     PUBLIC
         FILE_SET HEADERS
+        BASE_DIRS ${CMAKE_SOURCE_DIR}/include
         FILES
-            screen.hpp
+            ${CMAKE_SOURCE_DIR}/include/screen/screen.hpp
 )
-
-include(GoogleTest)
-gtest_discover_tests(screen_test)
