--- a/src/screen/CMakeLists.txt
+++ b/src/screen/CMakeLists.txt
@@ -3,10 +3,26 @@ add_library(Screen)
 target_sources(Screen
     PRIVATE
         screen.cpp
+        color_screen.cpp
     
     PUBLIC
         FILE_SET HEADERS
         BASE_DIRS ${CMAKE_SOURCE_DIR}/include
         FILES
             ${CMAKE_SOURCE_DIR}/include/screen/screen.hpp
+            ${CMAKE_SOURCE_DIR}/include/screen/color_screen.hpp
+)
+
+include(FetchContent)
+FetchContent_Declare(SFML
+    GIT_REPOSITORY https://github.com/SFML/SFML.git
+    GIT_TAG 3.0.2
+    GIT_SHALLOW ON
+    EXCLUDE_FROM_ALL
+    SYSTEM)
+FetchContent_MakeAvailable(SFML)
+
+target_link_libraries(Screen 
+    PUBLIC 
+        SFML::Graphics
 )
