--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(Graphics
     PRIVATE
         face.cpp
         point.cpp
+        camera.cpp
     
     PUBLIC
         FILE_SET HEADERS
@@ -11,6 +12,8 @@ target_sources(Graphics
         FILES
             ${CMAKE_SOURCE_DIR}/include/graphics/face.hpp
             ${CMAKE_SOURCE_DIR}/include/graphics/point.hpp
+            ${CMAKE_SOURCE_DIR}/include/graphics/camera.hpp
+            ${CMAKE_SOURCE_DIR}/include/graphics/color.hpp
 )
 
 target_link_libraries(Graphics
